--- a/src/packages.config
+++ b/src/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AsyncErrorHandler.Fody" version="1.0.11.0" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="Fody" version="1.29.2" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="NuGet.CommandLine" version="3.4.3" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
 </packages>
