refactored some of the memory management (impl IDispose on VideoSample)

--- a/src/MpegTS.Net.nuspec
+++ b/src/MpegTS.Net.nuspec
@@ -18,7 +18,10 @@
     <!--*-->
     <description>PCL Mpeg TS parsing lib</description>
     <!--*-->
-    <releaseNotes>inital release</releaseNotes>
+    <releaseNotes>-Added support for output to stream.  
+                  -Improved memory management.
+                  -Video samples now Impl IDisposable.
+    </releaseNotes>
     <copyright></copyright>
     <tags>Video Media Mpeg MpegTS H.264 </tags>
     <dependencies>      </dependencies>
